# protein-weaving

./: README.md  pyproject.toml
protein_weaving/: __init__.py  cli.py  pipeline.py
protein_weaving.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
protein_weaving/crochet/: amigurumi.py
protein_weaving/io/: cif_parser.py  pdb_parser.py
protein_weaving/kagome/: __init__.py  embed.py  lattice.py  pipeline.py
protein_weaving/mesh/: clean.py
protein_weaving/output/: instructions.py  svg_pdf.py  viz3d.py
protein_weaving/strands/: models.py  tracer.py
protein_weaving/surface/: marching_cubes.py  vdw_grid.py
protein_weaving/weaving/: base.py  quad.py  triaxial.py
